<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/current_location"
    android:layout_width="48dp"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_current_location"
        android:contentDescription="@string/pref_current_location_desc"
        android:layout_gravity="end|center_vertical"
        android:tint="@color/teal_500"/>
</FrameLayout>